corrected vertical alignment and center col title

--- a/client/src/css/Grid-Column-Word.css
+++ b/client/src/css/Grid-Column-Word.css
@@ -28,18 +28,19 @@
 
   display: flex;
   flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+
 
 }
 
 /*  COLUMN COMPONENT  */
 
 .Column {
-  /*display: flex;*/
-  /*flex-flow: column nowrap;*/
-
-
-  /*display: inline-block;*/
-  /*vertical-align: top;*/
+  display: flex;
+  flex-flow: column wrap;
+  align-items: flex-start;
 
   /*adds shadow to the columns*/
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
@@ -47,6 +48,8 @@
 
 .ColumnTitle {
   /*margin: 5px 5px ;*/
+  align-self: center;
+
 }
 
 
@@ -70,17 +73,27 @@
 .Word img {
   max-width: 100%;
 
-  order: 1;
+  display: inline-flex;
+  justify-content: center;
+
+  order: 2;
 }
 
 .WordText {
   padding-top: 5px;
   font-size: 1.2em;
 
-  order: 2;
+  display: inline-flex;
+  justify-content: center;
+
+  order: 1;
 }
 
+/* button when deleting a word */
 .DeleteButton {
   height: 20px;
   width: 20px;
+
+  display: inline-flex;
+  justify-content: center;
 }
